# mednafenSSDev

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile.in  README.md  configure
.github/workflows/: build-ci.yml  build.yml
.gitlab/: Dockerfile
cmake/: cmake.config.h.in
mednafen/: .gitignore  .gitlab-ci.yml  CMakeLists.txt  aclocal.m4  configure.ac
mednafen/.gitlab/: Dockerfile
mednafen/cmake/: create_cfg.py
mednafen/src/: Makefile.in
mednafen/src/drivers/: Makefile.in
mednafen/src/drivers_imgui/: debugui.h  elf_parser.cpp  main.cpp  med_imgui.cpp  med_imgui.h  profiler.cpp  profiler.h  video.cpp
mednafen/src/drivers_libxxx/: Makefile.in
mednafen/src/ss/: Makefile.am  Makefile.in  cart.cpp  debugui.cpp  sh7095_ops.inc  ss.cpp  vdp2.cpp
mednafen/src/ss/cart/: debug.cpp
mednafen/tinygdb/: gdb.cpp  gdb.h  helpers.h  readme.md  tcp-socket.cpp  windows.h
po/: POTFILES.in
src/drivers_dos/: Makefile.in
src/drivers_imgui/: debugger.cpp  elf_parser.cpp  elf_parser.h  main.cpp  med_imgui.cpp  nall-gdb.cpp  nall-gdb.h  opengl.h  profiler.h
src/sexyal/: Makefile.in
src/ss/: cart.h  debugui.cpp  sh7095.inc  sh7095_ops.inc  ss.cpp  ss.h  vdp2.h
tinygdb/: gdb-types.h  gdb.cpp  helpers.h  plat-windows.h  tcp-server.cpp  tcp-server.h  tcp-socket.cpp  tcp-socket.h  watchpoint.hpp
